# cryptoqrtool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  flake.nix  lighthouserc.cjs  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  docker.yml
.lighthouseci/: assertion-results.json  lhr-1781176398375.html  lhr-1781176398375.json  lhr-1781176409292.html  lhr-1781176409292.json  lhr-1781176420868.html  lhr-1781176420868.json  lhr-1781176432039.html  lhr-1781176432039.json  lhr-1781176444426.html  lhr-1781176444426.json  lhr-1781176454979.html  lhr-1781176454979.json  links.json
docs/: cryptogen-product-spec.md  implementation-progress.md  testing.md
scripts/: sync-crypto-icons.mjs
src/: app.css  app.d.ts  app.html  hooks.ts
src/lib/: analytics.ts  buildInfo.ts  cryptoIcons.ts  currency.ts  currencyOptions.ts  liveData.test.ts  liveData.ts  networkLogos.ts  networks.test.ts  networks.ts  qrStyle.test.ts  qrStyle.ts  seo.test.ts  seo.ts  seoJsonLd.ts  seoShared.ts  seoStaticRoutes.ts  storage.test.ts  storage.ts  theme.ts  verification.test.ts  verification.ts  versionCheck.test.ts  (+3 more)
wallet-stack/: .env.example  .gitignore  README.md  docker-compose.yml  generate-env.sh  pyproject.toml
wallet-stack/tests/: conftest.py  test_api.py  test_store.py
wallet-stack/tools/: Dockerfile  create_wallets.py  monitor.py  new_address.py  requirements.txt
wallet-stack/tools/wallet_api/: __init__.py  app.py
wallet-stack/tools/walletlib/: __init__.py  allocation.py  monitoring.py  store.py
(+69 files in other folders)
