[project]
name = "cryptoqr-wallet-stack"
version = "0.1.0"
description = "Headless wallet address generation tools for CryptoQR."
requires-python = ">=3.12"
dependencies = [
  "bip-utils==2.9.3",
  "eth-account==0.13.5",
  "requests==2.32.3",
  "solana==0.36.6",
  "solders==0.26.0",
]

[tool.uv]
package = false
