[project]
name = "cryptoqr-wallet-stack"
version = "0.1.0"
description = "Headless wallet address generation tools for CryptoQR."
requires-python = ">=3.12"
dependencies = [
  "bip-utils==2.9.3",
  "eth-account==0.13.5",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "pytest==8.3.4",
  "requests==2.32.3",
  "solana==0.36.6",
  "solders==0.26.0",
  "uvicorn[standard]==0.34.0",
]

[tool.uv]
package = false
